--- a/KeyboardVN/appsettings.json
+++ b/KeyboardVN/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "MailSettings": {
-    "Mail": "hungnthe176686@fpt.edu.vn",
+    "Mail": "YOUR_EMAIL",
     "DisplayName": "Elj Shop",
-    "Password": "ylnw dsbb mfjw ffgc",
+    "Password": "YOUR_PASSWORD",
     "Host": "smtp.gmail.com",
-    "Port": 587
+    "Port": PORT_NUMBER
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
